# agentcontainer

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml
agents/: README.md  travelling_scout.py
agents/basic/: inspect_primitives.py  ping_agent.py  read_docs_preview.py
agents/demo/: return_with_file_hits.py  travelling_scout.py  visit_and_go_back.py  visitcontainer-and-go-back.py
agents/lab/: http_probe.py  network_mapper.py  payload_echo.py
agents/maintain/: disk_report.py  echo_env_probe.py  process_snapshot.py
agents/network/: network_tree_walker.py
agents/search/: find_and_return.py  find_text.py  list_files.py
examples/: department_a.json  department_b.json  root.json
fixtures/department_a/docs/: notes.txt
fixtures/department_b/docs/: report.txt
fixtures/root/docs/: readme.txt
scripts/: generate_whitepaper_pdf.py
src/agentcontainer/: __init__.py  auth.py  cli.py  client.py  config.py  identity.py  protocol.py  runtime.py  server.py
tests/: test_auth.py  test_identity.py  test_runtime.py
