[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcontainer"
version = "0.1.0"
description = "TCP runtime for authenticated mobile Python agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "OpenAI Codex"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentcontainer = "agentcontainer.cli:main"
agentcontainer-server = "agentcontainer.server:main"
agentcontainer-client = "agentcontainer.client:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
